media/calibre/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: calibre
  namespace: media
spec:
  hostnames:
    - "calibre.${INTERNAL_HOSTNAME}"
  parentRefs:
    - name: production
      namespace: networking
  rules:
    - matches:
      backendRefs:
        - name: calibre
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: calibre-webserver
  namespace: media
spec:
  hostnames:
    - "calibre-webserver.${INTERNAL_HOSTNAME}"
  parentRefs:
    - name: production
      namespace: networking
  rules:
    - matches:
      backendRefs:
        - name: calibre-webserver
          port: 8081
