media/calibre/ingress-route.yaml
---
# needed for old kindle
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-webserver-local
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`calibre-webserver.192.168.0.230.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: calibre-webserver
          kind: Service
          port: 8081
